--- a/frontend/src/components/pop_ups/popup.css
+++ b/frontend/src/components/pop_ups/popup.css
@@ -77,16 +77,34 @@
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
+  min-width: 100px;
 }
 
 .btn.btn-confirm {
-  background-color: var(--botao-deletar);
+  background-color: var(--verde-escuro, #148229);
+  color: #ffffff;
+}
+
+.btn.btn-reject {
+  background-color: var(--botao-deletar, #c01627);
   color: #ffffff;
 }
 
 .btn.btn-cancel {
-  background-color: var(--botao-cancelar);
+  background-color: var(--botao-cancelar, #6c757d);
   color: #ffffff;
+}
+
+/* Botão Analisar */
+.botao-analisar {
+  background-color: var(--laranja-lista, #F6C368) ;
+  color: black ;
+  border: none ;
+  border-radius: 4px ;
+  padding: 6px 12px ;
+  cursor: pointer ;
+  font-weight: 500 ;
+  font-size: 0.7rem ;
 }
 
 /* ================= ANIMAÇÕES ================= */
