--- a/frontend/src/pages/telas_users/telas_cre/cre.css
+++ b/frontend/src/pages/telas_users/telas_cre/cre.css
@@ -91,3 +91,19 @@ max-width: 800px;
     content: "✖"; /* Ícone de X */
     font-size: 18px;
 }
+
+.btn-finalizadas {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: 0.3s ease;
+    background-color: var(--verde-oficial);
+    color: var(--cor-branca);
+    padding: 0.5rem 1rem;
+    border: 2px solid var(--verde-oficial);
+    border-radius: 20px;
+    gap: 0.5rem;
+    text-decoration: none;
+  }
