--- a/frontend/src/components/pop_ups/popup.css
+++ b/frontend/src/components/pop_ups/popup.css
@@ -137,3 +137,18 @@
   }
 }
 
+.input-error {
+    border: 2px solid red;
+    outline: none;
+  }
+
+  .error-text {
+    color: red;
+    font-weight: bold;
+    margin-top: 4px;
+  }
+  .erro-mensagem {
+    color: var(--mensagem-erro);
+    margin-top: 10px;
+}
+
