--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,46 +1,23 @@
-/* app.css */
-@import './var.css'; /* Import de variável no topo */
-
-* {
-    box-sizing: border-box; /* Essencial para layout consistente */
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%; /* Garante que body ocupe a altura total do viewport */
-    font-family: var(--fonte-oficial);
-    font-size: var(--tamanho-fonte-base);
-    color: var(--cor-preta); /* Usando var cor-preta */
-    background-color: var(--cor-branca); /* Um fundo branco padrão */
-    line-height: 1.6;
+body {
+  font-family: var(--fonte-oficial);
+  width: 100vw;
+  height: 100%;
+  margin: 0;
 }
 
 #root {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Faz o root ocupar a altura total da viewport */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-/* Estilos para links globais */
-a {
-    color: inherit; /* Herda a cor do pai */
-    text-decoration: none;
+
+
+div {
+  color: rgb(0, 0, 0);
 }
 
-/* Reset global para selects múltiplos */
-select[multiple] {
-    -webkit-appearance: none !important;
-    -moz-appearance: none !important;
-    appearance: none !important;
-    background-image: none !important;
+.texts{
+  display: flex;
 }
 
-select[multiple]::-webkit-scrollbar {
-    width: 8px;
-}
-
-select[multiple]::-webkit-scrollbar-thumb {
-    background: var(--cabecalho-lista); /* Usando variável */
-    border-radius: 4px;
-}
