--- a/frontend/src/var.css
+++ b/frontend/src/var.css
@@ -24,7 +24,7 @@
     --link-azul:rgb(15, 118, 228);
 
     --laranja-lista:#F6C368;
-    --cabecalho-lista:#ccc;
+    --cabecalho-lista:  linear-gradient(to bottom, #148229,#00420C);
 
     /* MENSAGEM DE ERRO*/
 
