--- a/frontend/src/components/styles/telas_opcoes.css
+++ b/frontend/src/components/styles/telas_opcoes.css
@@ -208,3 +208,23 @@ Cruds ou
     margin-right: 10px;
   }
 }
+/*Tela Login*/
+
+  /* Caixa do conteúdo central */
+  .login-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .login-page-content {
+    /* Este estilo deve ir aqui ou no main.css, se você deseja centralizar o conteúdo da página */
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente dentro do main-content-wrapper */
+    align-items: center; /* Centraliza verticalmente se houver espaço */
+    flex-grow: 1; /* Permite que este container ocupe todo o espaço disponível verticalmente */
+    margin: 200px;
+}
+  
+    
