--- a/frontend/src/var.css
+++ b/frontend/src/var.css
@@ -12,7 +12,7 @@
     /* BOTÕES CORES*/
 
     --botao-deletar: #c01627;
-    --botao-criar: #148229;
+    --botao-criar-enviar: #148229;
     --botao-editar: rgb(29, 92, 169);
 
     --botao-cancelar:#6c757d;
